# wyrtloom

./: CHANGELOG.md  CODE_REVIEW.md  Cargo.toml  README.md  SECURITY.md  SoftDevSpec.md  Specification
crates/core/: Cargo.toml
crates/core/src/: agent.rs  bootstrap.rs  bus.rs  canon.rs  client_auth.rs  escalation.rs  kanban.rs  lib.rs  logger.rs  persistence.rs  plugin.rs  profile.rs  provider.rs  sandbox.rs  security.rs  storage.rs  types.rs  users.rs  util.rs
crates/plugin-bus-tokio/: Cargo.toml
crates/plugin-bus-tokio/src/: lib.rs
crates/plugin-calibration-ledger/: Cargo.toml  DESIGN.md
crates/plugin-calibration-ledger/src/: lib.rs
crates/plugin-coverage-map/: Cargo.toml  DESIGN.md
crates/plugin-coverage-map/src/: lib.rs
crates/plugin-digest-generator/: Cargo.toml  DESIGN.md
crates/plugin-digest-generator/src/: lib.rs
crates/plugin-escalation-cli/: Cargo.toml
crates/plugin-escalation-cli/src/: lib.rs
crates/plugin-gate-engine/: Cargo.toml  DESIGN.md
crates/plugin-gate-engine/src/: lib.rs
crates/plugin-hunt-harness/: Cargo.toml  DESIGN.md
crates/plugin-hunt-harness/src/: lib.rs
crates/plugin-hunt-harness/tests/: sandbox_integration.rs
crates/plugin-insight-artifact/: Cargo.toml  DESIGN.md
crates/plugin-insight-artifact/src/: lib.rs
crates/plugin-interest-router/: Cargo.toml  DESIGN.md
crates/plugin-interest-router/src/: lib.rs
crates/plugin-interest-router/tests/: core_integration.rs
crates/plugin-kanban-sqlite/: Cargo.toml
crates/plugin-kanban-sqlite/src/: lib.rs
crates/plugin-logger-sqlite/: Cargo.toml
crates/plugin-logger-sqlite/src/: lib.rs
crates/plugin-mastery-policy/: Cargo.toml  DESIGN.md
crates/plugin-mastery-policy/src/: lib.rs
crates/plugin-probe-ladder/: Cargo.toml  DESIGN.md
crates/plugin-probe-ladder/src/: lib.rs
crates/plugin-provider-ollama/: Cargo.toml
crates/plugin-provider-ollama/src/: lib.rs
crates/plugin-rationale-ledger/: Cargo.toml  DESIGN.md
crates/plugin-rationale-ledger/src/: lib.rs
crates/plugin-rotation-scheduler/: Cargo.toml  DESIGN.md
crates/plugin-rotation-scheduler/src/: lib.rs
crates/plugin-rotation-scheduler/tests/: rotation.rs
crates/plugin-sandbox-wasmtime/: Cargo.toml
crates/plugin-sandbox-wasmtime/src/: lib.rs
crates/plugin-withdrawal-scheduler/: Cargo.toml  DESIGN.md
crates/plugin-withdrawal-scheduler/src/: lib.rs
crates/plugin-withdrawal-scheduler/tests/: integration.rs
crates/plugin-workflow-conversation/: Cargo.toml
crates/plugin-workflow-conversation/src/: audit.rs  baseline.rs  build_own.rs  calibration.rs  coverage.rs  digest.rs  gate.rs  hunt.rs  insight.rs  interest.rs  lib.rs  pilot.rs  policy.rs  probe.rs  rationale.rs  rotation.rs  withdrawal.rs  workflow.rs
crates/plugin-workflow-profile/: Cargo.toml  DESIGN.md
crates/plugin-workflow-profile/src/: lib.rs
crates/plugin-workflow-sqlite/: Cargo.toml
crates/plugin-workflow-sqlite/src/: lib.rs
docs/: README.md  api-reference.md  architecture.md  configuration.md  contracts.md  dashboard-user-guide.md  deployment.md  development.md  getting-started.md  security-overview.md  writing-a-plugin.md
src/: main.rs  pipeline.rs
