[workspace]
members = [
    "crates/core",
    "crates/plugin-kanban-sqlite",
    "crates/plugin-provider-ollama",
    "crates/plugin-sandbox-wasmtime",
    "crates/plugin-logger-sqlite",
    "crates/plugin-escalation-cli",
    "crates/plugin-bus-tokio",
    "crates/plugin-interest-router",
    ".",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
wyrtloom-core = { path = "crates/core" }
tokio        = { version = "1", features = ["full"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
uuid         = { version = "1", features = ["v4", "serde"] }
chrono       = { version = "0.4", features = ["serde"] }
anyhow       = "1"
thiserror    = "1"
rusqlite     = { version = "0.31", features = ["bundled"] }
reqwest      = { version = "0.12", features = ["json", "blocking"] }
wasmtime     = "22"
wat          = "1"
hmac         = "0.12"
sha2         = "0.10"
rand         = "0.8"

[package]
name    = "wyrtloom"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wyrtloom-core               = { workspace = true }
plugin-kanban-sqlite        = { path = "crates/plugin-kanban-sqlite" }
plugin-provider-ollama      = { path = "crates/plugin-provider-ollama" }
plugin-sandbox-wasmtime     = { path = "crates/plugin-sandbox-wasmtime" }
plugin-logger-sqlite        = { path = "crates/plugin-logger-sqlite" }
plugin-escalation-cli       = { path = "crates/plugin-escalation-cli" }
plugin-bus-tokio             = { path = "crates/plugin-bus-tokio" }
tokio.workspace     = true
anyhow.workspace    = true
chrono.workspace    = true
uuid.workspace      = true
wat.workspace       = true
serde_json.workspace  = true
serde.workspace       = true
