[package]
name    = "wyrtloom-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde        = { workspace = true }
serde_json   = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true }
hmac         = { workspace = true }
sha2         = { workspace = true }
rand         = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
