[package]
name    = "plugin-coverage-map"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wyrtloom-core = { workspace = true }
rusqlite      = { workspace = true }
serde_json    = { workspace = true }
uuid          = { workspace = true }
chrono        = { workspace = true }
thiserror     = { workspace = true }
serde         = { workspace = true }
