[package]
name    = "plugin-gate-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wyrtloom-core = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
thiserror     = { workspace = true }
uuid          = { workspace = true }

[dev-dependencies]
plugin-kanban-sqlite = { path = "../plugin-kanban-sqlite" }
plugin-logger-sqlite = { path = "../plugin-logger-sqlite" }
