[package]
name    = "plugin-rotation-scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wyrtloom-core = { workspace = true }
serde         = { workspace = true }
thiserror     = { workspace = true }

[dev-dependencies]
uuid          = { workspace = true }
serde_json    = { workspace = true }
