[package]
name = "plugin-workflow-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wyrtloom-core.workspace = true
plugin-workflow-conversation = { path = "../plugin-workflow-conversation" }
rusqlite.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
chrono.workspace = true
uuid.workspace = true
